--- a/Deep Neural Networks.ipynb
+++ b/Deep Neural Networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "def relu(z):\n",
-    "    return np.max(z, 0)"
+    "    return np.maximum(z, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,15 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "def weight_initialization(layer_dims):\n",
     "    parameters = {}\n",
     "    for i in range(1, len(layer_dims)):\n",
-    "        parameters[\"dW\" + str(i)] = np.random.randn(layer_dims[i], layer_dims[i - 1]) * np.sqrt(2 / layer_dims[i - 1])\n",
-    "        parameters[\"db\" + str(i)] = np.zeros((layer_dims[i]))\n",
+    "        parameters[\"W\" + str(i)] = np.random.randn(layer_dims[i], layer_dims[i - 1]) * np.sqrt(2 / layer_dims[i - 1])\n",
+    "        parameters[\"b\" + str(i)] = np.zeros((layer_dims[i], 1))\n",
     "    return parameters"
    ]
   },
@@ -67,23 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dW1': array([[-0.51328069,  0.11724205,  0.52927715, -0.98142019,  0.21708381],\n",
-      "       [-1.27544016, -0.56494439,  0.61216891, -0.151865  ,  0.26036911],\n",
-      "       [ 0.75954512,  0.69029561,  0.74404788, -0.31759043, -0.30710217]]), 'db1': array([0., 0., 0.]), 'dW2': array([[-0.28295244, -0.57499012,  0.77760108]]), 'db2': array([0.])}\n"
+      "(50, 100)\n",
+      "(50, 1)\n",
+      "(1, 50)\n",
+      "(1, 1)\n"
      ]
     }
    ],
    "source": [
-    "layer_dims = (5, 3, 1)\n",
+    "layer_dims = (100, 50, 1)\n",
     "parameters = weight_initialization(layer_dims)\n",
-    "print(parameters)"
+    "for i in parameters.values():\n",
+    "    print(i.shape)"
    ]
   },
   {
@@ -95,15 +97,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def forward_prop():\n",
-    "    return 0\n",
+    "def forward_prop(parameters, X):\n",
+    "    A_prev = X\n",
+    "    cache = ()\n",
+    "    \n",
+    "    for i in range(len(parameters) // 2):\n",
+    "        Z = np.dot(parameters[\"W\" + str(i + 1)], A_prev) + parameters[\"b\" + str(i + 1)]\n",
+    "        A = relu(Z)\n",
+    "        A_prev = A\n",
+    "        \n",
+    "    return Y_pred, cache\n",
     "\n",
     "def compute_cost():\n",
+    "    cost = 0\n",
     "    return cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test our functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.random.rand(100, 100)\n",
+    "Y = np.sum(X, axis = 0, keepdims=True)\n",
+    "Y = np.where(Y > 50, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50, 100)\n",
+      "(50, 100)\n",
+      "(1, 100)\n",
+      "(1, 100)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, ())"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forward_prop(parameters, X)"
    ]
   },
   {
