finished fp, cost, working on bp

--- a/Deep Neural Networks.ipynb
+++ b/Deep Neural Networks.ipynb
@@ -92,41 +92,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a function for forward propagation and cost function now"
+    "Let's create our training set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def forward_prop(parameters, X):\n",
-    "    A_prev = X\n",
-    "    cache = ()\n",
-    "    \n",
-    "    for i in range(len(parameters) // 2):\n",
-    "        Z = np.dot(parameters[\"W\" + str(i + 1)], A_prev) + parameters[\"b\" + str(i + 1)]\n",
-    "        A = relu(Z)\n",
-    "        A_prev = A\n",
-    "        \n",
-    "    return Y_pred, cache\n",
-    "\n",
-    "def compute_cost():\n",
-    "    cost = 0\n",
-    "    return cost"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's test our functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,33 +107,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 142,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(50, 100)\n",
-      "(50, 100)\n",
-      "(1, 100)\n",
-      "(1, 100)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0, ())"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "forward_prop(parameters, X)"
+    "Let's create a function for forward propagation and cost function now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_prop(parameters, X):\n",
+    "    A_prev = X\n",
+    "    caches = []\n",
+    "    \n",
+    "    for i in range(len(parameters) // 2):\n",
+    "        # last layer\n",
+    "        if i == len(parameters) // 2 - 1:\n",
+    "            Z = np.dot(parameters[\"W\" + str(i + 1)], A_prev) + parameters[\"b\" + str(i + 1)]\n",
+    "            A = sigmoid(Z)\n",
+    "            cache = (Z, A)\n",
+    "            caches.append(cache)\n",
+    "            \n",
+    "        # previous layers\n",
+    "        else:\n",
+    "            Z = np.dot(parameters[\"W\" + str(i + 1)], A_prev) + parameters[\"b\" + str(i + 1)]\n",
+    "            A = relu(Z)\n",
+    "            A_prev = A\n",
+    "            cache = (Z, A)\n",
+    "            caches.append(cache)\n",
+    "        \n",
+    "    Y_pred = A\n",
+    "    return Y_pred, cache\n",
+    "\n",
+    "def compute_cost(Y_pred, Y):\n",
+    "    m = Y.shape[1]\n",
+    "    cost = -1 / m * np.sum(Y * np.log(Y_pred) + (1 - Y) * np.log(1 - Y_pred))\n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test our forward prop and backward prop functions now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_pred, caches = forward_prop(parameters, X)\n",
+    "cost = compute_cost(Y_pred, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backward_prop(Y_pred, Y, cache, parameters):\n",
+    "    # last layer\n",
+    "    dZ = Y_pred - Y\n",
+    "    dW = np.dot(dZ, \n",
+    "    return grads\n",
+    "    "
    ]
   },
   {
