beginning of tf

--- a/Deep Neural Networks.ipynb
+++ b/Deep Neural Networks.ipynb
@@ -167,16 +167,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
     "def backward_prop(Y_pred, Y, cache, parameters):\n",
     "    # last layer\n",
-    "    dZ = Y_pred - Y\n",
-    "    dW = np.dot(dZ, \n",
+    "    for i in reversed(range(len(parameters) // 2 - 1)):\n",
+    "        if i == 1:\n",
+    "            pass\n",
+    "    grads = 0\n",
     "    return grads\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backward_prop(Y_pred, Y, cache, parameters)"
    ]
   },
   {
