worked more on misc tf functions

--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +102,201 @@
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
     "    print(sess.run(d, feed_dict = {x: xval, y : yval}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's write the sigmoid function with tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(z):\n",
+    "    x = tf.placeholder(tf.float32, name = 'x')\n",
+    "    \n",
+    "    sigmoid = tf.sigmoid(x)\n",
+    "    with tf.Session() as sess:\n",
+    "        a = sess.run(sigmoid, feed_dict = {x: z})\n",
+    "    \n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's test our sigmoid function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "1.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sigmoid(0))\n",
+    "print(sigmoid(float('inf')))\n",
+    "print(sigmoid(float('-inf')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's define our loss function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss(y_pred, y_true):\n",
+    "    Y = tf.placeholder(tf.float32, name = 'Y')\n",
+    "    A = tf.placeholder(tf.float32, name = 'A')\n",
+    "    \n",
+    "    loss = -(tf.multiply(Y, tf.log(A)) + tf.multiply(1 - Y, tf.log(1 - A)))\n",
+    "    \n",
+    "    with tf.Session() as sess:\n",
+    "        l = sess.run(loss, feed_dict = {Y: y_true, A: y_pred})\n",
+    "        \n",
+    "    return l "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2231435513142097\n",
+      "0.22314353\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(-1 * np.log(0.8))\n",
+    "print(loss(0.8, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A note is that you can use `tf.nn.sigmoid_cross_entropy_with_logits(logits = , labels = )`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you should implement one-hot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot(labels, C):\n",
+    "    C = tf.constant(C, name = 'C')\n",
+    "    one_hot_matrix = tf.one_hot(labels, C, axis = 0)\n",
+    "    with tf.Session() as sess:\n",
+    "        one_hot = sess.run(one_hot_matrix)\n",
+    "        \n",
+    "    return one_hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = np.array([1, 2, 3, 1, 0])\n",
+    "C = 4\n",
+    "print(one_hot(labels, C))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So what have we learned about so far. We've learned about `tf.sigmoid, tf.nn.sigmoid_cross_entropy_with_logits, tf.one_hot`. Now we're going to learn about `tf.ones`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ones(shape):\n",
+    "    ones = tf.ones(shape)\n",
+    "    with tf.Session() as sess:\n",
+    "        out = sess.run(ones)\n",
+    "        \n",
+    "    return out    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test our function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ones((5, 4)))"
    ]
   },
   {
