almost done with TF

--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -300,11 +300,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's first make a function for creating placeholders."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_placeholders(n_x, n_y):\n",
+    "    X = tf.placeholder('float', (n_x, None))\n",
+    "    Y = tf.placeholder('float', (n_y, None))\n",
+    "    return X, Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, ?)\n",
+      "X.shape = (100, ?)\n",
+      "Y.shape = (4, ?)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, Y = create_placeholders(100, 4)\n",
+    "print('X.shape = ' + str(X.shape))\n",
+    "print('Y.shape = ' + str(Y.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now create a function for initializing parameters. We're going to use a 3 layer neural network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_parameters(n_x, n_y):\n",
+    "    W1 = tf.get_variable('W1', shape = (25, n_x), initializer = tf.contrib.layers.xavier_initializer())\n",
+    "    b1 = tf.get_variable('b1', shape = (25, 1))\n",
+    "    W2 = tf.get_variable('W2', shape = (12, 25), initializer = tf.contrib.layers.xavier_initializer())\n",
+    "    b2 = tf.get_variable('b2', shape = (12, 1))\n",
+    "    W3 = tf.get_variable('W3', shape = (n_x, 12), initializer = tf.contrib.layers.xavier_initializer())\n",
+    "    b3 = tf.get_variable('b3', shape = (n_y, 1))\n",
+    "    \n",
+    "    parameters = {'W1': W1, 'b1': b1, 'W2': W2, 'b2': b2, 'W3': W3, 'b3': b3}\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1(25, 100)\n",
+      "b1(25, 1)\n",
+      "W2(12, 25)\n",
+      "b2(12, 1)\n",
+      "W3(100, 12)\n",
+      "b3(4, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "\n",
+    "parameters = initialize_parameters(100, 4)\n",
+    "for k, v in parameters.items():\n",
+    "    print(k + str(v.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's implement the forward propagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' X is the placeholder for the input \n",
+    "    return: Z3'''\n",
+    "def forward_propagation(X, parameters):\n",
+    "    \n",
+    "    Z1 = tf.matmul(parameters['W1'], X) + parameters['b1']\n",
+    "    A1 = tf.nn.relu(Z1)\n",
+    "    Z2 = tf.matmul(parameters['W2'], A1) + parameters['b2']\n",
+    "    A2 = tf.nn.relu(Z2)\n",
+    "    Z3 = tf.matmul(parameters['W3'], A2) + parameters['b3']\n",
+    "    \n",
+    "    return Z3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's write a compute cost function. After this, we can easily write our neural network model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cost(Z3, Y):\n",
+    "    logits = tf.transpose(Z3)\n",
+    "    labels = tf.transpose(Y)\n",
+    "    \n",
+    "    cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits = logits, labels = labels))\n",
+    "    return cost\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use all the functions we've written and create our neural network model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def model():\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
