--- a/Regularizers.ipynb
+++ b/Regularizers.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,19 +72,19 @@
      "output_type": "stream",
      "text": [
       "W1\n",
-      "[[-0.01145654 -0.00224881  0.01241124  0.01363586 -0.00615969]\n",
-      " [ 0.00713221  0.0093595  -0.0032767   0.01605715 -0.01548016]\n",
-      " [-0.0018691   0.01000462 -0.01111556 -0.00385396  0.01810878]\n",
-      " [ 0.01452331  0.01560582  0.0009462   0.01512056  0.01236631]]\n",
+      "[[-0.00653288 -0.00819667  0.00031673  0.00889022  0.01301598]\n",
+      " [ 0.00206776  0.0089669   0.0127582  -0.00828307 -0.00073103]\n",
+      " [-0.0018422   0.00376808 -0.01355366  0.01301257  0.0128692 ]\n",
+      " [ 0.01187923 -0.0020258  -0.00485629  0.01572953 -0.00682283]]\n",
       "b1\n",
       "[[0.]\n",
       " [0.]\n",
       " [0.]\n",
       " [0.]]\n",
       "W2\n",
-      "[[ 0.01712561 -0.01361308  0.01168411  0.00155003]\n",
-      " [-0.01190163 -0.00420841 -0.00895725  0.01149984]\n",
-      " [-0.00035521  0.00333828  0.01252999 -0.01519509]]\n",
+      "[[ 6.17140506e-03  5.63390061e-03  6.90247743e-03 -7.49576961e-03]\n",
+      " [-9.64550975e-03  6.91329132e-03 -1.47138253e-02  1.79246889e-02]\n",
+      " [-2.12096969e-03  1.15474087e-02 -1.95564450e-02  7.49957548e-05]]\n",
       "b2\n",
       "[[0.]\n",
       " [0.]\n",
@@ -125,17 +125,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def relu(Z):\n",
-    "    return np.max(Z, 0)"
+    "    return np.maximum(Z, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 100)\n",
+      "(100, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.random.randn(100, 100)\n",
+    "print(X.shape)\n",
+    "Z = relu(X)\n",
+    "print(Z.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 1 0 0 1 1 0 1 1] [0 1 1 0 0 1 1 1 1 1]\n",
-      "[0 0 1 0 0 1 1 0 1 1]\n",
-      "0.5\n"
+      "[0 0 1 0 1 1 1 0 1 0] [1 1 1 0 1 1 0 0 0 1]\n",
+      "[0 0 1 0 1 1 0 0 0 0]\n",
+      "0.3\n"
      ]
     }
    ],
@@ -317,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -451,28 +472,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 0 2 0 1 1 0 2 0 2 2 2 0 1 0 2 1 2 2 0 0 2 0 0 0 0 1 0 2 1 1 0 0 2 2 1\n",
-      "  1 0 1 0 0 2 0 1 2 1 0 0 2 1 1 2 1 0 1 2 2 2 2 0 0 1 2 1 1 1 1 2 0 2 0 1\n",
-      "  2 2 0 1 1 1 1 2 0 0 2 1 0 1 1 0 2 2 2 1 0 0 2 1 1 1 2 0]]\n",
-      "[[2 0 2 0 1 1 0 2 0 2 2 2 0 1 0 2 1 2 2 0 0 2 0 0 0 0 1 0 2 1 1 0 0 2 2 1\n",
-      "  1 0 1 0 0 2 0 1 2 1 0 0 2 1 1 2 1 0 1 2 2 2 2 0 0 1 2 1 1 1 1 2 0 2 0 1\n",
-      "  2 2 0 1 1 1 1 2 0 0 2 1 0 1 1 0 2 2 2 1 0 0 2 1 1 1 2 0]]\n"
+      "[[0 1 2 0 0 1 0 1 1 1 2 1 1 2 2 0 0 1 2 2 1 2 0 0 0 2 1 1 2 2 2 0 1 1 0 0\n",
+      "  0 2 2 2 1 2 2 1 2 1 1 0 0 0 0 2 2 2 1 0 0 1 2 2 0 2 2 2 0 1 1 2 0 0 2 2\n",
+      "  1 1 0 1 2 1 0 2 2 2 1 2 0 2 2 0 0 1 1 1 1 2 2 2 0 1 1 0]]\n",
+      "[[0 1 2 0 0 1 0 1 1 1 2 1 1 2 2 0 0 1 2 2 1 2 0 0 0 2 1 1 2 2 2 0 1 1 0 0\n",
+      "  0 2 2 2 1 2 2 1 2 1 1 0 0 0 0 2 2 2 1 0 0 1 2 2 0 2 2 2 0 1 1 2 0 0 2 2\n",
+      "  1 1 0 1 2 1 0 2 2 2 1 2 0 2 2 0 0 1 1 1 1 2 2 2 0 1 1 0]]\n",
+      "[1.08, 1.08]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jlin/.local/lib/python3.6/site-packages/ipykernel_launcher.py:3: RuntimeWarning: divide by zero encountered in log\n",
+      "/home/jlin/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:3: RuntimeWarning: divide by zero encountered in log\n",
       "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-      "/home/jlin/.local/lib/python3.6/site-packages/ipykernel_launcher.py:3: RuntimeWarning: invalid value encountered in multiply\n",
+      "/home/jlin/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:3: RuntimeWarning: invalid value encountered in multiply\n",
       "  This is separate from the ipykernel package so we can avoid doing imports until\n",
       "/home/jlin/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:32: RuntimeWarning: invalid value encountered in reduce\n",
       "  return umr_sum(a, axis, dtype, out, keepdims)\n"
@@ -484,11 +506,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now we should generalize this to n layer neural networks. \n",
+    "    \n",
+    "    We're going to need to rewrite initialize parameters.\n",
+    "   \n",
+    "    Let's also use He initialization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def he_initialization(layer_dims):\n",
+    "    '''\n",
+    "    input: layer_dims\n",
+    "    (n_x, n_1, n_2, ..., n_L)\n",
+    "    len = L + 1\n",
+    "    output: parameters\n",
+    "    {'W1', 'b1', 'W2', 'b2', ..., 'WL', 'bL'}\n",
+    "    weights : 1 -> L\n",
+    "    '''\n",
+    "    \n",
+    "    L = len(layer_dims) - 1\n",
+    "    parameters = {}\n",
+    "    \n",
+    "    for l in range(1, L + 1): # we want to include L\n",
+    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l - 1]) * np.sqrt(2.0 / layer_dims[l - 1])\n",
+    "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
+    "        \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer_dims = (100, 50, 6, 1)\n",
+    "parameters = he_initialization(layer_dims)\n",
+    "print(len(parameters) // 2)\n",
+    "#print(parameters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now let's write a function to do forward propagation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_propagation(X, parameters):\n",
+    "    '''inputs: X, parameters\n",
+    "    outputs: AL, cache\n",
+    "    cache contains A, Z for layers 1:L for backprop\n",
+    "    '''\n",
+    "    \n",
+    "    L = len(parameters) // 2\n",
+    "    cache = {}\n",
+    "    \n",
+    "    A = X\n",
+    "    \n",
+    "    for l in range(1, L):\n",
+    "        Z = np.dot(parameters['W' + str(l)], A) + parameters['b' + str(l)]\n",
+    "        A = relu(Z)\n",
+    "        cache['Z' + str(l)] = Z \n",
+    "        cache['A' + str(l)] = A\n",
+    "        # use relu for every layer but the last\n",
+    "        \n",
+    "    # last layer\n",
+    "    Z = np.dot(parameters['W' + str(L)], A) + parameters['b' + str(L)]\n",
+    "    A = sigmoid(Z)\n",
+    "    # dont add the Z and A for last layer, because they're not necessary for the backward propagation calculation\n",
+    "    \n",
+    "    return A, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.random.rand(100, 100)\n",
+    "A, cache = forward_propagation(X, parameters)"
+   ]
   },
   {
    "cell_type": "code",
